--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -383,7 +383,7 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   text-decoration: none;
   justify-content: space-between;
-  background-color: rgb(180, 185, 192);
+  background-color: rgb(117, 141, 165);
 }
 
 .shoe-info-detailed{
@@ -628,7 +628,7 @@ a > .rating > span:last-child {
   margin: .5rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
-  max-height: 15rem;
+  max-height: 20rem;
 }
 
 .shoe-detailed-info li, .shoe-detailed-actions li{
@@ -881,6 +881,60 @@ option[value=""][disabled] {
 option {
   color: black;
 }
+
+/* Reset Select */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: rgb(255, 255, 255);
+  background-image: none;
+}
+/* Remove IE arrow */
+select::-ms-expand {
+  display: none;
+}
+/* Custom Select */
+.select {
+  position: relative;
+  display: flex;
+  width: 10em;
+  height: 2em;
+  line-height: 3;
+  background: #b3b3b4;
+  overflow: hidden;
+  border-radius: .25em;
+}
+select {
+  flex: 1;
+  padding: 0 .5em;
+  color: rgb(7, 7, 7);
+  cursor: pointer;
+}
+/* Arrow */
+.select::after {
+  content: '\25BC';
+  font-size: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #8b8f94;
+  cursor: pointer;
+  pointer-events: none;
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
+}
+/* Transition */
+.select:hover::after {
+  color: #f39c12;
+}
+
 
 @media screen and (max-width: 650px) {
   .header {
