--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -23,7 +23,7 @@ body{
   font: 1.6rem Helvetica;
   height: 100vh;
   margin: 0;
-  background-color: rgb(245, 244, 244);
+  background-color: rgb(248, 248, 248);
 }
 
 .content-display {
@@ -650,10 +650,27 @@ a > .rating > span:last-child {
   max-height: 0.5rem;
 }
 
+.input-box{
+  border: .1rem rgb(0, 0, 0) solid;
+  background-color: rgb(239, 239, 245);
+}
+
+.signin-submit-button{
+  padding: 1rem;
+  border: .1rem rgb(4, 14, 104) solid;
+  background-color: rgb(223, 223, 236);
+  border-radius: 0.9rem;
+  width: 18rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
 .submit-button{
   padding: 1rem;
-  border: .1rem dimgray solid;
+  border: .1rem rgb(0, 0, 0) solid;
+  background-color: rgb(223, 223, 236);
   border-radius: 0.5rem;
+  width: 18rem;
   cursor: pointer;
 }
 
@@ -678,9 +695,10 @@ a > .rating > span:last-child {
   width: 32rem;
   align-items: center;
   padding: 2rem;
-  border: .1rem #c0c0c0 solid;
+  border: .1rem #707070 solid;
   border-radius: .5rem;
   list-style-type: none;
+  background-color: rgb(243, 243, 243);
 }
 
 .form-container li{
@@ -898,6 +916,24 @@ option[value=""][disabled] {
 }
 option {
   color: black;
+}
+
+.montserrat-header{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 33px;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  background-color: rgb(252, 252, 252);
+  border: 0.1rem solid rgb(150, 140, 140);
+  padding: 1rem;
+  width: 34rem;
+  text-align: center;
+}
+
+.montserrat-text{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 /* Reset Select */
