--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -655,10 +655,12 @@ a > .rating > span:last-child {
   background-color: rgb(239, 239, 245);
 }
 
-.signin-submit-button{
+.signreg-submit-button{
   padding: 1rem;
-  border: .1rem rgb(4, 14, 104) solid;
+  border: .1rem rgb(6, 11, 59) solid;
   background-color: rgb(223, 223, 236);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
   border-radius: 0.9rem;
   width: 18rem;
   cursor: pointer;
@@ -908,6 +910,11 @@ input{
   background-color: rgb(252, 250, 250);
 }
 
+.align-center{
+  text-align: center;
+  width:20rem;
+}
+
 select:required:invalid {
   color: gray;
 }
@@ -923,8 +930,8 @@ option {
   font-size: 33px;
   font-weight: bold;
   margin-bottom: 1rem;
-  background-color: rgb(252, 252, 252);
-  border: 0.1rem solid rgb(150, 140, 140);
+  background-color: rgb(251, 251, 251);
+  border: 0.1rem solid rgb(5, 11, 94);
   padding: 1rem;
   width: 34rem;
   text-align: center;
@@ -936,7 +943,7 @@ option {
   font-weight: bold;
 }
 
-/* Reset Select */
+/* Select Styling */
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -948,11 +955,11 @@ select {
   background: rgb(255, 255, 255);
   background-image: none;
 }
-/* Remove IE arrow */
+
 select::-ms-expand {
   display: none;
 }
-/* Custom Select */
+
 .select {
   position: relative;
   display: flex;
@@ -970,7 +977,7 @@ select {
   color: rgb(7, 7, 7);
   cursor: pointer;
 }
-/* Arrow */
+
 .select::after {
   content: '\25BC';
   font-size: 10px;
@@ -985,11 +992,10 @@ select {
   -o-transition: .25s all ease;
   transition: .25s all ease;
 }
-/* Transition */
+
 .select:hover::after {
   color: #1329f3;
 }
-
 
 @media screen and (max-width: 650px) {
   .header {
