--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -820,6 +820,17 @@ input{
   margin-right: 2rem;
 }
 
+.continue-shopping{
+  flex: 8 1;
+  margin-bottom: 1.5rem;
+  margin-top: 0.25rem;
+  color: rgb(21, 27, 107);
+  text-decoration: none;
+  font-size: 1.8rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
 .cart-name{
   flex: 8 1;
   margin-bottom: 1.5rem;
@@ -827,6 +838,7 @@ input{
   color: rgb(21, 27, 107);
   text-decoration: none;
   font-size: 1.8rem;
+  font-weight: bold;
 }
 
 .cart-colorway{
