--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -1,9 +1,11 @@
 /* Font imports */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cairo:wght@600&family=News+Cycle&family=Raleway&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Michroma&family=Montserrat+Subrayada:wght@700&family=Quicksand:wght@500&family=Rubik+Mono+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 
 html{
@@ -328,8 +330,7 @@ body::-webkit-scrollbar-thumb {
 .home-brand-name{
   background-color: white;
   font-size: 3rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
+  font-family: 'Raleway', sans-serif;
   text-align: center;
   align-items: center;
   margin-top: 3rem;
@@ -659,12 +660,26 @@ a > .rating > span:last-child {
   padding: 1rem;
   border: .1rem rgb(6, 11, 59) solid;
   background-color: rgb(223, 223, 236);
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: bold;
   border-radius: 0.9rem;
   width: 18rem;
   cursor: pointer;
   margin-top: 1rem;
+  font-size: 15px;
+}
+
+.signreg-submit-button:hover{
+  padding: 1rem;
+  border: .1rem rgb(6, 11, 59) solid;
+  background-color: rgb(236, 236, 243);
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  border-radius: 0.9rem;
+  width: 18rem;
+  cursor: pointer;
+  margin-top: 1rem;
+  font-size: 15px;
 }
 
 .submit-button{
@@ -907,12 +922,30 @@ input{
 }
 
 .checkout{
-  background-color: rgb(226, 226, 224);
+  background-color: rgb(238, 238, 232);
   width: 100%;
-  height: 33rem;
+  height: 40rem;
   text-align: center;
-  padding-top: 25rem;
+  align-items: center;
+  padding-top: 12rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.checkout-message{
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(186, 190, 216);
+  align-items: center;
+  font-size: 20px;
+  padding: 10rem;
+  margin-left: 6rem; margin-right: 6rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid rgb(59, 59, 59)
+}
+
+.checkout-buttons{
+  display: flex;
+  flex-direction: row;
 }
 
 /* misc */
@@ -955,6 +988,10 @@ option {
   font-weight: bold;
 }
 
+.reset-text-decoration{
+  text-decoration: none;
+  color: black;
+}
 /* Select Styling */
 select {
   -webkit-appearance: none;
@@ -1009,7 +1046,7 @@ select {
   color: #1329f3;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
   .header {
     max-height: 25rem;
   }
