--- a/front-end-display/src/index.css
+++ b/front-end-display/src/index.css
@@ -942,23 +942,27 @@ input{
 }
 
 .checkout{
+  display: flex;
   background-color: rgb(238, 238, 232);
+  height: 100%;
   width: 100%;
-  height: 40rem;
   text-align: center;
   align-items: center;
-  padding-top: 12rem;
+  justify-content: center;
+  padding-top: 14rem;
+  padding-bottom: 14rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .checkout-message{
   display: flex;
   flex-direction: column;
-  background-color: rgb(186, 190, 216);
+  background-color: rgb(168, 172, 192);
   align-items: center;
   font-size: 20px;
+  max-width: 40rem;
   padding: 10rem;
-  margin-left: 6rem; margin-right: 6rem;
+  margin-left: 3rem; margin-right: 3rem;
   border-radius: 0.5rem;
   border: 0.1rem solid rgb(59, 59, 59)
 }
